force-app/main/default/objects/cgcloud__Order_Item_Order_Template_Association__c/cgcloud__Order_Item_Order_Template_Association__c.object-meta.xml
<CustomObject>
    <description>This use case describes the process of adding one or more order item templates to order template.</description>
    <label>Order Item Order Template Association</label>
    <nameField>
        <displayFormat>OOA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Item Order Template Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>