force-app/main/default/objects/cgcloud__Order_Item_Order_Template_Association__c/fields/cgcloud__Check_Uniqueness__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check_Uniqueness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check Uniqueness.</description>
    <label>Check Uniqueness</label>
    <type>Checkbox</type>
</CustomField>