force-app/main/default/objects/cgcloud__Order_Item_Order_Template_Association__c/fields/cgcloud__Main__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Main__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Main order item template.</description>
    <label>Main</label>
    <type>Checkbox</type>
</CustomField>