force-app/main/default/objects/cgcloud__Order_Item_Order_Template_Association__c/fields/cgcloud__Order_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Template__c</fullName>
    <description>Order Template Id</description>
    <label>Order Template</label>
    <referenceTo>cgcloud__Order_Template__c</referenceTo>
    <relationshipLabel>Order Item Order Template Associations</relationshipLabel>
    <relationshipName>Order_Order_Item_Template_Associa_del1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>