force-app/main/default/objects/cgcloud__Order_Item_Order_Template_Association__c/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Valid From.</description>
    <label>Valid From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>