force-app/main/default/objects/cgcloud__Order_Item_Order_Template_Association__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <defaultValue>DATE(2099,12,31)</defaultValue>
    <description>Valid Thru.</description>
    <label>Valid Thru</label>
    <required>true</required>
    <type>Date</type>
</CustomField>