force-app/main/default/objects/cgcloud__Order_Item_Order_Template_Association__c/validationRules/cgcloud__Sales_Org_should_be_same.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same</fullName>
    <active>true</active>
    <description>The Order Template and the Order Item Template must have the same Sales Org.</description>
    <errorConditionFormula>TEXT(cgcloud__Order_Item_Template__r.cgcloud__Sales_Org__c) &lt;&gt; TEXT( cgcloud__Order_Template__r.cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Order Template and the Order Item Template must have the same Sales Org.</errorMessage>
</ValidationRule>